[package]
name = "scant3r-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
percent-encoding.workspace = true 